fix iframe FadeIn animation wrapper overlap issue

--- a/src/pages/Search/Result/Result.module.css
+++ b/src/pages/Search/Result/Result.module.css
@@ -31,11 +31,17 @@
   margin: 60px auto 40px;
 }
 
+.VideoWrapper {
+  box-shadow: 0px 10px 30px #00000050;
+  border-radius: 10px;
+  overflow: hidden;
+  height: 100%;
+}
+
 .VideoBox iframe {
   position: relative;
   opacity: 0;
-  top: 10px;
-  animation: FadeIn 0.4s ease forwards;
+  animation: PhaseIn 0.4s ease forwards;
   animation-delay: 0.6s;
 }
 
